# pdf-title-extraction

./: README.md  pyproject.toml  requirements.txt
models/: mlp_ensemble.joblib
results/: mlp_results.txt
src/: title_detection_model.py
src/feature_extractors/: binary_feature_extractor.py  feature_extractor.py  pdf_loc_feature_extractor.py  text_embedding_extractor.py
src/titleextraction/: title_detection_model.py
src/titleextraction/feature_extractors/: binary_feature_extractor.py  feature_extractor.py  pdf_loc_feature_extractor.py  text_embedding_extractor.py
